changed header and logo

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
   <title>Farpoint Bookstore</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
+
+
 <div id='stars'></div>
 <div id='stars2'></div>
 <div id='stars3'></div>
+
+
 <body>
   <header>
-    <h1 class="logo">Logo</h1>
+    <h1 class="logo">
+      <img src="images/icons/logo-transparent.png" alt="">
+      <div>Farpoint Bookstore</div> 
+    </h1>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
          <ul>
