added pictures, favicon, and bg change

--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
   <title>Farpoint Bookstore</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&family=Tilt+Neon&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 
-<div id='stars'></div>
-<div id='stars2'></div>
-<div id='stars3'></div>
-
 
 <body>
+  <div id='stars'></div>
+  <div id='stars2'></div>
+  <div id='stars3'></div>
   <header>
     <h1 class="logo">
       <img src="images/icons/logo-transparent.png" alt="">
@@ -26,8 +32,8 @@
     <nav>
          <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">Books</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="#">Fiction</a></li>
+              <li><a href="#">Science</a></li>
               <li><a href="#">Contact</a></li>
          </ul>
     </nav>
@@ -35,6 +41,48 @@
          <span></span>
     </label>
 </header>
+
+  <div class="book-box">
+    <h1>Fiction</h1>
+    <div class="book-list">
+      <div class="book-item">
+        <img src="images/books/dune/dune-main.png" alt="Dune Main Cover Page">
+        <h3>DUNE</h3>
+        <p>Frank Herbert</p>
+      </div>
+      <div class="book-item">
+        <img src="images/books/FAF/FAF-main.jpg" alt="Book 2">
+        <h3>Flowers for Algernon</h3>
+        <p>Daniel Keyes</p>
+      </div>
+      <div class="book-item">
+        <img src="images/books/W&P/W&P.jpg" alt="Book 3">
+        <h3>War and Peace</h3>
+        <p>Leo Tolstoy</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="book-box">
+    <h2>Featured Books</h2>
+    <div class="book-list">
+      <div class="book-item">
+        <img src="book1.jpg" alt="Book 1">
+        <h3>Dune</h3>
+        <p>Dave Herbert</p>
+      </div>
+      <div class="book-item">
+        <img src="book2.jpg" alt="Book 2">
+        <h3>Book 2 Title</h3>
+        <p>Author Name</p>
+      </div>
+      <div class="book-item">
+        <img src="book3.jpg" alt="Book 3">
+        <h3>Book 3 Title</h3>
+        <p>Author Name</p>
+      </div>
+    </div>
+  </div>
 
   <footer>
     <div class="container">
