added text affects and more books

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </header>
 
   <div class="book-box">
-    <h1>Fiction</h1>
+    <h1>FICTION</h1>
     <div class="book-list">
       <div class="book-item">
         <img src="images/books/dune/dune-main.png" alt="Dune Main Cover Page">
@@ -51,46 +51,48 @@
         <p>Frank Herbert</p>
       </div>
       <div class="book-item">
-        <img src="images/books/FAF/FAF-main.jpg" alt="Book 2">
+        <img src="images/books/FAF/FAF-main.jpg" alt="Flowers for Algernon Cover Page">
         <h3>Flowers for Algernon</h3>
         <p>Daniel Keyes</p>
       </div>
       <div class="book-item">
-        <img src="images/books/W&P/W&P.jpg" alt="Book 3">
-        <h3>War and Peace</h3>
-        <p>Leo Tolstoy</p>
+        <img src="images/books/TS/TS-main.jpg" alt="Translation State Cover Page">
+        <h3>Translation State</h3>
+        <p>Ann Leckie</p>
       </div>
     </div>
   </div>
 
   <div class="book-box">
-    <h2>Featured Books</h2>
+    <h1>SCIENCE</h1>
     <div class="book-list">
       <div class="book-item">
-        <img src="book1.jpg" alt="Book 1">
-        <h3>Dune</h3>
-        <p>Dave Herbert</p>
+        <img src="images/books/cosmos/cosmos-main.jpg" alt="Cosmos Cover Page">
+        <h3>Cosmos</h3>
+        <p>Carl Sagan</p>
       </div>
       <div class="book-item">
-        <img src="book2.jpg" alt="Book 2">
-        <h3>Book 2 Title</h3>
-        <p>Author Name</p>
+        <img src="images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
+        <h3>A Brief History of Time</h3>
+        <p>Stephen Hawking</p>
       </div>
       <div class="book-item">
-        <img src="book3.jpg" alt="Book 3">
-        <h3>Book 3 Title</h3>
-        <p>Author Name</p>
+        <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
+        <h3>Our Mathematical Universe</h3>
+        <p>Max Tegmark</p>
       </div>
     </div>
   </div>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2023 Farpoint Bookstore. All rights reserved.</p>
+    <div class="footer-container">
+      <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
       <ul class="footer-links">
+        <li><a href="#">About Us</a></li>
         <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Copyright</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
     </div>
   </footer>
