--- a/fiction.html
+++ b/fiction.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Farpoint Bookstore</title>
+  <title>Fiction Books</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
 </header>
 
   <div class="book-box">
-    <a href="fiction.html"><h1>FICTION</h1></a>
+    <h1>SCIENCE FICTION</h1>
     <div class="book-list">
       <div class="book-item">
         <a href="book_pages/fiction/Dune.html">
@@ -55,11 +55,11 @@
         <p>Frank Herbert</p>
       </div>
       <div class="book-item">
-        <a href="book_pages/fiction/FFA.html">
-          <img src="images/books/FFA/FFA-main.jpg" alt="Flowers for Algernon Cover Page">
-          <h3>Flowers for Algernon</h3>
+        <a href="book_pages/fiction/TS.html">
+          <img src="images/books/TS/TS-main.jpg" alt="Translation State Cover Page">
+          <h3>Translation State</h3>
         </a>
-        <p>Daniel Keyes</p>
+        <p>Ann Leckie</p>
       </div>
       <div class="book-item">
         <a href="book_pages/fiction/TS.html">
@@ -72,28 +72,28 @@
   </div>
 
   <div class="book-box">
-    <a href="science.html"><h1>SCIENCE</h1></a>
+    <h1>LITERARY FICTION</h1>
       <div class="book-list">
         <div class="book-item">
-          <a href="book_pages/science/cosmos.html">
-            <img src="images/books/cosmos/cosmos-main.jpg" alt="Cosmos Cover Page">
-            <h3>Cosmos</h3>
-          </a>
-          <p>Carl Sagan</p>
-        </div>
-        <div class="book-item">
-          <a href="book_pages/science/ABHT.html">
-            <img src="images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
-            <h3>A Brief History of Time</h3>
-          </a>
-          <p>Stephen Hawking</p>
-        </div>
-        <div class="book-item">
-          <a href="book_pages/science/OMU.html">
-            <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
+        <a href="book_pages/fiction/FFA.html">
+          <img src="images/books/FFA/FFA-main.jpg" alt="Flowers for Algernon Cover Page">
+          <h3>Flowers for Algernon</h3>
+        </a>
+        <p>Daniel Keyes</p>
+      </div>
+      <div class="book-item">
+        <a href="book_pages/fiction/W&P.html">
+          <img src="images/books/W&P/W&P-main.jpg" alt="War and Peace Cover Page">
+          <h3>War & Peace</h3>
+        </a>
+        <p>Leo Tolstoy</p>
+      </div>
+      <div class="book-item">
+        <a href="book_pages/fiction/W&P.html">
+          <img src="images/books/W&P/W&P-main.jpg" alt="War and Peace Cover Page">
+          <h3>War & Peace</h3>
+        </a>
+        <p>Leo Tolstoy</p>
       </div>
     </div>
   </div>
