added subcategories pages and links and finished contact page

--- a/fiction.html
+++ b/fiction.html
@@ -17,12 +17,12 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-
-
 <body>
+
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
+
   <header>
     <h1 class="logo">
       <a href="index.html">
@@ -33,19 +33,19 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="fiction.html">Fiction</a></li>
-              <li><a href="science.html">Science</a></li>
-              <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fiction.html">Fiction</a></li>
+            <li><a href="science.html">Science</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
   <div class="book-box">
-    <h1>SCIENCE FICTION</h1>
+    <a href="book_pages/SciFi.html"><h1>SCIENCE FICTION</h1></a>
     <div class="book-list">
       <div class="book-item">
         <a href="book_pages/fiction/Dune.html">
@@ -72,7 +72,7 @@
   </div>
 
   <div class="book-box">
-    <h1>LITERARY FICTION</h1>
+    <a href="book_pages/LiFi.html"><h1>LITERARY FICTION</h1></a>>
       <div class="book-list">
         <div class="book-item">
         <a href="book_pages/fiction/FFA.html">
