--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
   <div class="book-box">
     <a href="fiction.html"><h1>FICTION</h1></a>
@@ -102,6 +102,10 @@
     <h1>MORE CATEGORIES</h1>
   </div>
 
+  <div class="video-box">
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/uD4izuDMUQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+
   <footer>
     <div class="footer-container">
       <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
@@ -110,7 +114,7 @@
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Copyright</a></li>
         <li><a href="#">Terms</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="contact.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           html">Contact Us</a></li>
       </ul>
     </div>
   </footer>
