--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
+
   <header>
     <h1 class="logo">
       <a href="index.html">
@@ -34,10 +35,10 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="fiction.html">Fiction</a></li>
-              <li><a href="science.html">Science</a></li>
-              <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fiction.html">Fiction</a></li>
+            <li><a href="science.html">Science</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
@@ -45,7 +46,7 @@
     </label>
 </header>
 
-  <form action="submit-form.php" method="post">
+  <form method="post">
   <label for="contact-purpose">Contact Purpose:</label>
   <select id="contact-purpose" name="contact-purpose">
     <option value="sell-books">I want to sell books</option>
@@ -53,12 +54,12 @@
   </select>
   <br>
 
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" required>
-  <br>
-
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
+  <div class="name-email-container">
+    <label for="name" id="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    <label for="email" id="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+  </div>
   <br>
 
   <label for="phone">Phone:</label>
@@ -71,6 +72,7 @@
   <input type="checkbox" id="phone-preference" name="contact-preference[]" value="phone">
   <label for="phone-preference">By phone</label>
   <br>
+  <br>
 
   <label>Receive weekly newsletter:</label>
   <input type="radio" id="yes-newsletter" name="newsletter" value="yes" checked>
@@ -78,14 +80,13 @@
   <input type="radio" id="no-newsletter" name="newsletter" value="no">
   <label for="no-newsletter">No</label>
   <br>
-
-  <label for="extra-notes">Extra Notes:</label>
-  <textarea id="extra-notes" name="extra-notes"></textarea>
   <br>
 
+  <label for="extra-notes">Extra Notes:</label>
+  <textarea id="extra-notes" name="extra-notes" rows="4" cols="50"></textarea>
   <input type="submit" value="Submit">
   <input type="reset" value="Reset">
-</form>
+  </form>
 
 
   <footer>
