--- a/science.html
+++ b/science.html
@@ -20,9 +20,11 @@
 
 
 <body>
+
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
+
   <header>
     <h1 class="logo">
       <a href="index.html">
@@ -33,19 +35,19 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="fiction.html">Fiction</a></li>
-              <li><a href="science.html">Science</a></li>
-              <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fiction.html">Fiction</a></li>
+            <li><a href="science.html">Science</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
   <div class="book-box">
-    <h1>PHYSICS</h1>
+    <a href="book_pages/physics.html"><h1>PHYSICS</h1></a>
     <div class="book-list">
         <div class="book-item">
           <a href="book_pages/science/cosmos.html">
@@ -73,7 +75,7 @@
   </div>
 
   <div class="book-box">
-    <h1>MATH</h1>
+    <a href="book_pages/math.html"><h1>MATH</h1></a>
     <div class="book-list">
         <div class="book-item">
           <a href="book_pages/science/OMU.html">
@@ -98,7 +100,6 @@
         </div>
     </div>
   </div>
-
 
   <div class="book-box">
     <h1>MORE CATEGORIES</h1>
