added all books, finished contact form, fixed footer, and refractor sub categories pages

--- a/book_pages/LiFi.html
+++ b/book_pages/LiFi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiction Books</title>
+  <title>Literary Fiction</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,11 @@
 </head>
 
 <body>
+
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
+  
   <header>
     <h1 class="logo">
       <a href="../index.html">
@@ -60,11 +62,11 @@
           <p>Leo Tolstoy</p>
       </div>
       <div class="book-item">
-          <a href="fiction/W&P.html">
-            <img src="../images/books/W&P/W&P-main.jpg" alt="War and Peace Cover Page">
-            <h3>War & Peace</h3>
+          <a href="fiction/fahrenheit.html">
+            <img src="../images/books/Fahrenheit/Fahrenheit-main.jpg" alt="Fahrenheit 451 Cover Page">
+            <h3>Fahrenheit 451</h3>
           </a>
-          <p>Leo Tolstoy</p>
+          <p>Ray Bradbury</p>
       </div>
     </div>
   </div>
