--- a/book_pages/fiction/Dune.html
+++ b/book_pages/fiction/Dune.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dune</title>
   <link rel="stylesheet" href="../../styles.css">
+  <link rel="stylesheet" href="../../contact&book.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -16,8 +17,6 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
-
-
 
 <body>
   <div id='stars'></div>
@@ -42,9 +41,31 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
-  
+  <ul class="breadcrumbs">
+    <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../fiction.html">Fiction</a></li>
+      <li>Dune</li>
+  </ul>
+
+  <div class="product-container">
+    <div class="product-images">
+      <img src="../../images/books/dune/dune-main.png" alt="Big Image">
+      <div class="small-images">
+        <img src="../../images/books/dune/dune-main.png" alt="Small Image 1">
+        <img src="../../images/books/dune/dune-main.png" alt="Small Image 2">
+        <img src="../../images/books/dune/dune-main.png" alt="Small Image 3">
+      </div>
+    </div>
+    <div class="product-details">
+        <h2>Product Name</h2>
+        <p>Product Description</p>
+        <p>Price: $19.99</p>
+        <button>Add to Cart</button>
+    </div>
+  </div>
+
 
   <footer>
     <div class="footer-container">
