--- a/book_pages/math.html
+++ b/book_pages/math.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiction Books</title>
+  <title>Math</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,27 +48,27 @@
   <div class="book-box">
     <h1>MATH</h1>
     <div class="book-list">
-        <div class="book-item">
-          <a href="science/OMU.html">
-            <img src="../images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
-        <div class="book-item">
-          <a href="science/OMU.html">
-            <img src="../images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
-        <div class="book-item">
-          <a href="science/OMU.html">
-            <img src="../images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
+      <div class="book-item">
+        <a href="science/zero.html">
+          <img src="../images/books/zero/zero-main.jpg" alt="Zero Cover Page">
+          <h3>Zero</h3>
+        </a>
+        <p>Charles Seife</p>
+      </div>
+      <div class="book-item">
+        <a href="science/OMU.html">
+          <img src="../images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
+          <h3>Our Mathematical Universe</h3>
+        </a>
+        <p>Max Tegmark</p>
+      </div>
+      <div class="book-item">
+        <a href="science/IP.html">
+          <img src="../images/books/IP/IP-main.jpg" alt="Infinitite Powers Cover Page">
+          <h3>Infinitite Powers</h3>
+        </a>
+        <p>Steven Strogatz</p>
+      </div>
     </div>
   </div>
 
