--- a/book_pages/physics.html
+++ b/book_pages/physics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiction Books</title>
+  <title>Physics</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +20,11 @@
 
 
 <body>
+  
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
+
   <header>
     <h1 class="logo">
       <a href="../index.html">
@@ -42,35 +44,34 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
-<body>
-    <div class="book-box">
-        <h1>PHYSICS</h1>
-        <div class="book-list">
-            <div class="book-item">
-                <a href="science/cosmos.html">
-                    <img src="../images/books/cosmos/cosmos-main.jpg" alt="Cosmos Cover Page">
-                    <h3>Cosmos</h3>
-                </a>
-                <p>Carl Sagan</p>
-                </div>
-                <div class="book-item">
-                <a href="science/ABHT.html">
-                    <img src="../images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
-                    <h3>A Brief History of Time</h3>
-                </a>
-                <p>Stephen Hawking</p>
-                </div>
-                <div class="book-item">
-                <a href="science/ABHT.html">
-                    <img src="../images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
-                    <h3>A Brief History of Time</h3>
-                </a>
-                <p>Stephen Hawking</p>
-            </div>
+  <div class="book-box">
+    <h1>PHYSICS</h1>
+    <div class="book-list">
+      <div class="book-item">
+        <a href="science/cosmos.html">
+          <img src="../images/books/cosmos/cosmos-main.jpg" alt="Cosmos Cover Page">
+          <h3>Cosmos</h3>
+        </a>
+        <p>Carl Sagan</p>
         </div>
+        <div class="book-item">
+          <a href="science/ABHT.html">
+            <img src="../images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
+            <h3>A Brief History of Time</h3>
+          </a>
+        <p>Stephen Hawking</p>
+        </div>
+        <div class="book-item">
+          <a href="science/TOT.html">
+            <img src="../images/books/TOT/TOT-main.jpg" alt="The Order of Time Cover Page">
+            <h3>The Order of Time</h3>
+          </a>
+        <p>Carlo Rovelli</p>
+      </div>
     </div>
+  </div>
 
   <footer>
     <div class="footer-container">
@@ -84,6 +85,7 @@
       </ul>
     </div>
   </footer>
+
 </body>
 </html>
 
