--- a/fiction.html
+++ b/fiction.html
@@ -55,11 +55,11 @@
         <p>Frank Herbert</p>
       </div>
       <div class="book-item">
-        <a href="book_pages/fiction/TS.html">
-          <img src="images/books/TS/TS-main.jpg" alt="Translation State Cover Page">
-          <h3>Translation State</h3>
+        <a href="book_pages/fiction/babel.html">
+          <img src="images/books/babel/babel-main.jpg" alt="Babel-17 Cover Page">
+          <h3>Babel-17</h3>
         </a>
-        <p>Ann Leckie</p>
+        <p>Samuel Delaney</p>
       </div>
       <div class="book-item">
         <a href="book_pages/fiction/TS.html">
@@ -72,7 +72,7 @@
   </div>
 
   <div class="book-box">
-    <a href="book_pages/LiFi.html"><h1>LITERARY FICTION</h1></a>>
+    <a href="book_pages/LiFi.html"><h1>LITERARY FICTION</h1></a>
       <div class="book-list">
         <div class="book-item">
         <a href="book_pages/fiction/FFA.html">
@@ -89,11 +89,11 @@
         <p>Leo Tolstoy</p>
       </div>
       <div class="book-item">
-        <a href="book_pages/fiction/W&P.html">
-          <img src="images/books/W&P/W&P-main.jpg" alt="War and Peace Cover Page">
-          <h3>War & Peace</h3>
+        <a href="book_pages/fiction/fahrenheit.html">
+          <img src="images/books/Fahrenheit/Fahrenheit-main.jpg" alt="War and Peace Cover Page">
+          <h3>Fahrenheit 451</h3>
         </a>
-        <p>Leo Tolstoy</p>
+        <p>Ray Bradbury</p>
       </div>
     </div>
   </div>
