--- a/science.html
+++ b/science.html
@@ -64,11 +64,11 @@
           <p>Stephen Hawking</p>
         </div>
         <div class="book-item">
-          <a href="book_pages/science/ABHT.html">
-            <img src="images/books/ABHT/ABHT-main.jpg" alt="A Brief History of Time Cover Page">
-            <h3>A Brief History of Time</h3>
+          <a href="book_pages/science/TOT.html">
+            <img src="images/books/TOT/TOT-main.jpg" alt="The Order of Time Cover Page">
+            <h3>The Order of Time</h3>
           </a>
-          <p>Stephen Hawking</p>
+          <p>Carlo Rovelli</p>
         </div>
       </div>
     </div>
@@ -77,27 +77,27 @@
   <div class="book-box">
     <a href="book_pages/math.html"><h1>MATH</h1></a>
     <div class="book-list">
-        <div class="book-item">
-          <a href="book_pages/science/OMU.html">
-            <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
-        <div class="book-item">
-          <a href="book_pages/science/OMU.html">
-            <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
-        <div class="book-item">
-          <a href="book_pages/science/OMU.html">
-            <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
-            <h3>Our Mathematical Universe</h3>
-          </a>
-          <p>Max Tegmark</p>
-        </div>
+      <div class="book-item">
+        <a href="book_pages/science/zero.html">
+          <img src="images/books/zero/zero-main.jpg" alt="Zero Cover Page">
+          <h3>Zero</h3>
+        </a>
+        <p>Charles Seife</p>
+      </div>
+      <div class="book-item">
+        <a href="book_pages/science/OMU.html">
+          <img src="images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Cover Page">
+          <h3>Our Mathematical Universe</h3>
+        </a>
+        <p>Max Tegmark</p>
+      </div>
+      <div class="book-item">
+        <a href="book_pages/science/IP.html">
+          <img src="images/books/IP/IP-main.jpg" alt="Infinitite Powers Cover Page">
+          <h3>Infinitite Powers</h3>
+        </a>
+        <p>Steven Strogatz</p>
+      </div>
     </div>
   </div>
 
