--- a/book_pages/SciFi.html
+++ b/book_pages/SciFi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiction Books</title>
+  <title>Science Fiction</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,11 +55,11 @@
         <p>Frank Herbert</p>
       </div>
       <div class="book-item">
-        <a href="fiction/TS.html">
-          <img src="../images/books/TS/TS-main.jpg" alt="Translation State Cover Page">
-          <h3>Translation State</h3>
+        <a href="fiction/babel.html">
+          <img src="../images/books/babel/babel-main.jpg" alt="Babel-17 Cover Page">
+          <h3>Babel-17</h3>
         </a>
-        <p>Ann Leckie</p>
+        <p>Samuel Delany</p>
       </div>
       <div class="book-item">
         <a href="fiction/TS.html">
