--- a/fiction.html
+++ b/fiction.html
@@ -90,7 +90,7 @@
       </div>
       <div class="book-item">
         <a href="book_pages/fiction/fahrenheit.html">
-          <img src="images/books/Fahrenheit/Fahrenheit-main.jpg" alt="War and Peace Cover Page">
+          <img src="images/books/fahrenheit/Fahrenheit-main.jpg" alt="Fahrenheit 451 Cover Page">
           <h3>Fahrenheit 451</h3>
         </a>
         <p>Ray Bradbury</p>
