Finished book detail pages, added pictures Added images, added responsiveness

--- a/book_pages/SciFi.html
+++ b/book_pages/SciFi.html
@@ -73,14 +73,14 @@
 
   <footer>
     <div class="footer-container">
-      <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
-      <ul class="footer-links">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="../contact.html">Contact Us</a></li>
-      </ul>
+    <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
+    <ul class="footer-links">
+      <li><a href="../about.html">About Us</a></li>
+      <li><a href="../privacy.html">Privacy Policy</a></li>
+      <li><a href="../copyright.html">Copyright</a></li>
+      <li><a href="../terms.html">Terms</a></li>
+      <li><a href="../contact.html">Contact Us</a></li>
+    </ul>
     </div>
   </footer>
 </body>
