--- a/book_pages/fiction/FFA.html
+++ b/book_pages/fiction/FFA.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flowers for Algernon</title>
   <link rel="stylesheet" href="../../styles.css">
+  <link rel="stylesheet" href="../../contact&book.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -16,8 +17,6 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
-
-
 
 <body>
   <div id='stars'></div>
@@ -42,18 +41,50 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
+  <ul class="breadcrumbs">
+    <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../fiction.html">Fiction</a></li>
+      <li>Flowers for Algernon</li>
+  </ul>
+
+  <div class="product-container">
+    <div class="product-images">
+      <div class="big-image">
+        <img src="../../images/books/FFA/FFA-main.jpg" alt="Flowers for Algernon Main Cover Page">
+      </div>
+      <div class="small-images">
+        <img src="../../images/books/FFA/FFA-1.jpg" alt="Flowers for Algernon Alternate Cover Page 1">
+        <img src="../../images/books/FFA/FFA-2.jpg" alt="Flowers for Algernon Alternate Cover Page 2">
+        <img src="../../images/books/FFA/FFA-3.jpg" alt="Flowers for Algernon Alternate Cover Page 3">
+      </div>
+    </div>
+    <div class="product-details">
+      <h1>Price:</h1>
+      <h1>$42.00</h1>
+      <button class="addtocart">
+        ADD TO CART
+      </button>
+    </div>
+  </div>
   
+  <div class="book-info">
+    <h1>Flowers for Algernon</h1>
+    <h4>by Daniel Keyes</h4>
+    <p>
+      'Flowers for Algernon' tells the story of Charlie Gordon and Algernon the mouse. Explore this work by Daniel Keyes through a background and summary, as well as a discussion of its themes centering on happiness and knowledge.
+    </p>
+  </div>
 
   <footer>
     <div class="footer-container">
       <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
       <ul class="footer-links">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a href="../../about.html">About Us</a></li>
+        <li><a href="../../privacy.html">Privacy Policy</a></li>
+        <li><a href="../../copyright.html">Copyright</a></li>
+        <li><a href="../../terms.html">Terms</a></li>
         <li><a href="../../contact.html">Contact Us</a></li>
       </ul>
     </div>
