--- a/book_pages/science/OMU.html
+++ b/book_pages/science/OMU.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Mathematical Universe</title>
   <link rel="stylesheet" href="../../styles.css">
+  <link rel="stylesheet" href="../../contact&book.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -16,8 +17,6 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
-
-
 
 <body>
   <div id='stars'></div>
@@ -42,18 +41,50 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
+  <ul class="breadcrumbs">
+    <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../fiction.html">Fiction</a></li>
+      <li>Our Mathematical Universe</li>
+  </ul>
+
+  <div class="product-container">
+    <div class="product-images">
+      <div class="big-image">
+        <img src="../../images/books/OMU/OMU-main.jpg" alt="Our Mathematical Universe Main Cover Page">
+      </div>
+      <div class="small-images">
+        <img src="../../images/books/OMU/OMU-1.jpg" alt="Our Mathematical Universe Alternate Cover Page 1">
+        <img src="../../images/books/OMU/OMU-2.jpg" alt="Our Mathematical Universe Alternate Cover Page 2">
+        <img src="../../images/books/OMU/OMU-3.jpeg" alt="Our Mathematical Universe Alternate Cover Page 3">
+      </div>
+    </div>
+    <div class="product-details">
+      <h1>Price:</h1>
+      <h1>$42.00</h1>
+      <button class="addtocart">
+        ADD TO CART
+      </button>
+    </div>
+  </div>
   
+  <div class="book-info">
+    <h1>Our Mathematical Universe</h1>
+    <h4>by Max Tegmark</h4>
+    <p>
+      Max Tegmark leads us on an astonishing journey through past, present and future, and through the physics, astronomy and mathematics that are the foundation of his work, most particularly his hypothesis that our physical reality is a mathematical structure and his theory of the ultimate multiverse. In a dazzling combination of both popular and groundbreaking science, he not only helps us grasp his often mind-boggling theories, but he also shares with us some of the often surprising triumphs and disappointments that have shaped his life as a scientist. Fascinating from first to last—this is a book that has already prompted the attention and admiration of some of the most prominent scientists and mathematicians.
+    </p>
+  </div>
 
   <footer>
     <div class="footer-container">
       <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
       <ul class="footer-links">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a href="../../about.html">About Us</a></li>
+        <li><a href="../../privacy.html">Privacy Policy</a></li>
+        <li><a href="../../copyright.html">Copyright</a></li>
+        <li><a href="../../terms.html">Terms</a></li>
         <li><a href="../../contact.html">Contact Us</a></li>
       </ul>
     </div>
