--- a/book_pages/science/cosmos.html
+++ b/book_pages/science/cosmos.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cosmos</title>
   <link rel="stylesheet" href="../../styles.css">
+  <link rel="stylesheet" href="../../contact&book.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -16,8 +17,6 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
-
-
 
 <body>
   <div id='stars'></div>
@@ -42,18 +41,50 @@
     <label for="nav-toggle" class="nav-toggle-label">
          <span></span>
     </label>
-</header>
+  </header>
 
+  <ul class="breadcrumbs">
+    <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../fiction.html">Fiction</a></li>
+      <li>Cosmos</li>
+  </ul>
+
+  <div class="product-container">
+    <div class="product-images">
+      <div class="big-image">
+        <img src="../../images/books/cosmos/cosmos-main.jpg" alt="Cosmos Main Cover Page">
+      </div>
+      <div class="small-images">
+        <img src="../../images/books/cosmos/cosmos-1.jpg" alt="Cosmos Alternate Cover Page 1">
+        <img src="../../images/books/cosmos/cosmos-2.jpeg" alt="Cosmos Alternate Cover Page 2">
+        <img src="../../images/books/cosmos/cosmos-3.jpg" alt="Cosmos Alternate Cover Page 3">
+      </div>
+    </div>
+    <div class="product-details">
+      <h1>Price:</h1>
+      <h1>$42.00</h1>
+      <button class="addtocart">
+        ADD TO CART
+      </button>
+    </div>
+  </div>
   
+  <div class="book-info">
+    <h1>Cosmos</h1>
+    <h4>by Carl Sagan</h4>
+    <p>
+      Cosmos is a book about the Universe. It aims to help us understand the vast and complex world we live in. In this book, Sagan tells us about the way the Universe appeared and evolved, how the human species evolved and what we may achieve in the future.
+    </p>
+  </div>
 
   <footer>
     <div class="footer-container">
       <h3>&copy; 2023 Farpoint Bookstore. All rights reserved.</h3>
       <ul class="footer-links">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a href="../../about.html">About Us</a></li>
+        <li><a href="../../privacy.html">Privacy Policy</a></li>
+        <li><a href="../../copyright.html">Copyright</a></li>
+        <li><a href="../../terms.html">Terms</a></li>
         <li><a href="../../contact.html">Contact Us</a></li>
       </ul>
     </div>
